stop overflow of content onto footer

--- a/site/_sass/_layout.scss
+++ b/site/_sass/_layout.scss
@@ -25,9 +25,10 @@ body {
 div.wrap {
    margin: 0 auto;
    padding-bottom: 150px;
- }
+}
 
 footer {
+    height: 125px;
     position: absolute;
     right: 0;
     bottom: 0;
